--- a/src/pages/HowToPlayPage/styles.module.scss
+++ b/src/pages/HowToPlayPage/styles.module.scss
@@ -3,6 +3,7 @@
 .root{
     position: relative;
     padding: 0.1px;
+    overflow: hidden;
     // .background{
         //     // background-image: linear-gradient(to bottom, #252629, #17181a);
         //     // position: absolute;
@@ -12,7 +13,16 @@
         //     // left: 50%;
         // }
 }
-
+.backgroundWrapper{
+    img{
+        position: absolute;
+        max-height: 100%;
+        &:first-child{
+            right: 0;
+            top: 0;
+        }
+    }
+}
 .title{
     font-size: 4.43rem;
     font-weight: 900;
@@ -24,6 +34,7 @@
 
 .contectSection, .contectSection4, .contectSection5{
     gap: 3rem;
+    overflow: hidden;
     p{
         position: relative;
         font-size: 1.286rem;
@@ -113,7 +124,8 @@
 
 .contectSection5{
     display: flex;
-    margin-bottom: 5rem;
+    margin: 0 auto 5rem auto;
+    max-width: 95%;
     img{
         max-width: 59.285rem;
     }
