--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -305,16 +305,14 @@
           width: 100%;
           height: 80px;
           font-family: Teko;
-          font-size: 44px;
+          font-size: 42px;
           line-height: 0.95;
           text-align: center;
-          color: $grey2;
+          font-weight: bold;
+          color: $primary;
 
           .__home_page_third_section_main_span {
-            color: $primary;
-            font-family: Teko;
-            font-size: 42px;
-            font-weight: bold;
+            color: $grey2;
           }
         }
       }
@@ -346,8 +344,6 @@
         }
         .__home_page_third_section_body_text_common {
           width: 402px;
-          height: 66px;
-
           font-family: Poppins;
           font-size: 14px;
           font-weight: 300;
@@ -356,12 +352,19 @@
           line-height: 1.57;
           letter-spacing: normal;
           color: $grey2;
+
+          div {
+            margin-top: 5px;
+          }
+        }
+
+        .__note_style {
+          font-style: italic;
         }
 
         .__home_page_third_section_body_text_1 {
           width: 560px;
           height: 30px;
-
           font-family: Teko;
           font-size: 32px;
           font-weight: bold;
@@ -379,7 +382,6 @@
         .__home_page_third_section_body_text_2 {
           width: 402px;
           height: 60px;
-
           font-family: Teko;
           font-size: 26px;
           font-weight: 600;
@@ -389,6 +391,7 @@
           letter-spacing: normal;
           color: $grey2;
           margin-bottom: 24px;
+          margin-top: 20px;
 
           span {
             font-family: Teko;
