--- a/src/pages/NHLpowerdFS/index.module.scss
+++ b/src/pages/NHLpowerdFS/index.module.scss
@@ -5,7 +5,8 @@
 	flex-direction: column;
 	flex: 1;
 	position: relative;
-	padding-top: 50px;
+	margin-top: 40px;
+
 	.container {
 		display: flex;
 		flex-direction: row;
@@ -66,6 +67,268 @@
 					justify-content: space-evenly;
 				}
 			}
+
+			.partner_logo {
+				width: 250px;
+				height: 40px;
+				display: flex;
+				align-self: flex-end;
+				margin: 20px 0;
+			}
+
+			.container_footer {
+				display: flex;
+				flex-direction: column;
+				margin: 0 0 3em 0;
+		
+				.container_footer_header {
+				  display: flex;
+				  flex-direction: row;
+				  align-items: flex-end;
+				  transform: translate(-20px, 20px);
+		
+				  .container_footer_title {
+					display: flex;
+					flex-direction: column;
+					transform: translate(10px, -20px);
+		
+					h2 {
+					  font-size: 20px;
+					  font-weight: normal;
+					  margin: 0;
+					  padding: 0;
+					}
+		
+					.separator {
+					  width: 52px;
+					  border-bottom: 2px solid $primary;
+					  margin-top: 2px;
+					}
+				  }
+		
+				  svg {
+					transform: translate(0px, 2px);
+				  }
+				}
+		
+				.container_footer_1 {
+				  display: flex;
+				  flex-direction: column;
+				  width: 100%;
+				  background-color: $black2;
+				  padding: 15px 42px;
+				  border-radius: 9px;
+				  align-items: flex-start;
+				  height: 406px;
+		
+				  .container_footer_2 {
+					display: flex;
+					width: 100%;
+					align-items: flex-start;
+		
+					.footer_column {
+					  display: flex;
+					  flex-direction: column;
+		
+					  &.width_200 {
+						width: 218px;
+					  }
+		
+					  p {
+						margin: 0;
+						padding: 0;
+					  }
+		
+					  .column_title {
+						display: flex;
+						width: 100%;
+						margin-bottom: 8px;
+		
+						p {
+						  font-family: Teko;
+						  font-size: 28px;
+						  font-weight: 600;
+						  color: $primary;
+						}
+					  }
+		
+					  .column_body {
+						display: flex;
+						flex-direction: column;
+		
+						.column_row {
+						  display: flex;
+						  width: 100%;
+						  font-family: Poppins;
+						  font-size: 16px;
+						  font-weight: 500;
+						  margin: 0 0 16px 0;
+						  position: relative;
+		
+						  svg {
+							margin: 0;
+							padding: 0;
+							width: 17px !important;
+							height: 17px !important;
+							position: absolute;
+							top: 3px;
+						  }
+		
+						  p {
+							transform: translateX(24px);
+							font-size: 16px;
+							font-weight: 500;
+							span {
+							  color: $primary;
+							  font-size: 16px;
+							  font-weight: 500;
+							}
+						  }
+						}
+					  }
+					}
+		
+					.contest_scoring_wrapper {
+					  display: flex;
+					  flex-direction: row;
+					}
+		
+					.scoring_column {
+					  display: flex;
+					  flex-direction: column;
+					  margin: 0 46px 0 0;
+		
+					  .scoring_title {
+						display: flex;
+						margin-bottom: 4px;
+		
+						p {
+						  margin: 0;
+						  padding: 0;
+						  font-size: 16px;
+						  color: $grey2;
+						  font-weight: 600;
+						  font-family: Poppins;
+						  border-bottom: 1px solid $grey2;
+						  line-height: 16px;
+						}
+					  }
+		
+					  .scoring_body {
+						display: flex;
+						flex-direction: column;
+		
+						.width_140 {
+						  width: 140px;
+						}
+		
+						p {
+						  font-size: 14px;
+						  width: 131px;
+						  margin: 0 10px 0 0;
+		
+						  &.flex_0_85 {
+							flex: 0.85;
+						  }
+						}
+		
+						span {
+						  font-size: 14px;
+						  font-weight: 600;
+						  color: $primary;
+						}
+		
+						.scoring_row {
+						  display: flex;
+						  width: 100%;
+						  text-align: left;
+						}
+					  }
+					}
+
+					.container_tabs {
+						display: flex;
+						flex-direction: column;
+						margin: 0;
+						padding: 0;
+				  
+						ul {
+						  list-style: none;
+						}
+				  
+						.tabs_header {
+						  display: flex;
+						  margin: 0;
+						  padding: 0;
+						  font-size: 16px;
+						  border-bottom: 2px solid $grey;
+				  
+						  li {
+							padding: 10px 0;
+							margin: 0 78px -2px 0;
+						  }
+				  
+						  li:hover {
+							cursor: pointer;
+						  }
+				  
+						  li.active {
+							border-bottom: 2px solid $primary;
+							color: $primary;
+							font-weight: bold;
+							font-style: italic;
+						  }
+				  
+						  span {
+							padding: 2px 8px;
+							margin: 0 5px;
+							border-radius: 50%;
+							background-color: $primary;
+							color: $white;
+							font-style: normal;
+						  }
+						}
+				  
+						.tab_body {
+						  margin: 10px 0;
+						}
+					  }
+				  }
+		
+				  .footer_full_rules {
+					justify-content: center;
+					align-items: center;
+					display: flex;
+					width: 187px;
+					padding: 13px 0;
+					background-color: $primary;
+					color: $darkblack;
+					font-size: 16px;
+					font-weight: 500;
+					border-radius: 12px;
+					border: none;
+					outline: none;
+		
+					&:hover {
+					  cursor: pointer;
+					}
+		
+					img {
+					  width: 26px;
+					  height: 18px;
+					  margin-left: 8px;
+					}
+				  }
+				}
+				.container_body_img {
+				  width: 476px;
+				  height: 332px;
+				  position: absolute;
+				  display: flex;
+				  align-self: flex-end;
+				  bottom: 7.32rem;
+				}
+			  }
 		}
 
 		.sidebar_container {
