--- a/src/pages/MLBpowerdFS/index.module.scss
+++ b/src/pages/MLBpowerdFS/index.module.scss
@@ -65,11 +65,12 @@
           display: flex;
           flex-direction: column;
           margin: 0 auto;
-          max-height: 800px;
+          height: 800px;
           justify-content: flex-start;
           align-items: center;
           overflow: hidden scroll;
           width: 100%;
+          padding: 0;
 
           &::-webkit-scrollbar {
             width: 0;
@@ -432,6 +433,14 @@
         }
       }
     }
+  }
+
+  .loading_view {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
   }
 }
 
