--- a/src/components/SportsSelectionCard3/index.module.scss
+++ b/src/components/SportsSelectionCard3/index.module.scss
@@ -117,6 +117,29 @@
     }
   }
 
+  .rushing_and_receiving {
+    display: flex;
+    flex-direction: row;
+    height: 6px;
+    margin-bottom: 2px;
+
+    div {
+      display: flex;
+      flex: 1;
+      justify-content: center;
+      opacity: 0.6;
+      font-family: Poppins;
+      font-size: 12px;
+      font-weight: bold;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: 2px;
+      text-align: center;
+      color: #688fbd;
+    }
+  }
+
   p {
     font-size: var(--font-size-14);
     margin-top: 15px;
@@ -160,6 +183,14 @@
         font-weight: normal;
         text-transform: capitalize;
         margin: 5.5px 0;
+        font-family: Poppins;
+        font-size: 14px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        color: $grey2;
       }
     }
 
@@ -403,6 +434,29 @@
       }
     }
 
+    .rushing_and_receiving {
+      display: flex;
+      flex-direction: row;
+      height: 6px;
+      margin-bottom: 2px;
+  
+      div {
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        opacity: 0.6;
+        font-family: Poppins;
+        font-size: 12px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: 2px;
+        text-align: center;
+        color: #688fbd;
+      }
+    }
+
     p {
       font-size: var(--font-size-18);
       margin-top: 15px;
@@ -431,6 +485,14 @@
           font-weight: normal;
           text-transform: capitalize;
           margin: 5.5px 0;
+          font-family: Poppins;
+          font-size: 14px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: normal;
+          color: $grey2;
         }
       }
 
@@ -604,6 +666,29 @@
       }
     }
 
+    .rushing_and_receiving {
+      display: flex;
+      flex-direction: row;
+      height: 6px;
+      margin-bottom: 2px;
+  
+      div {
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        opacity: 0.6;
+        font-family: Poppins;
+        font-size: 12px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: 2px;
+        text-align: center;
+        color: #688fbd;
+      }
+    }
+
     p {
       font-size: var(--font-size-16);
 
@@ -637,6 +722,14 @@
           font-weight: normal;
           text-transform: capitalize;
           margin: 5.5px 0;
+          font-family: Poppins;
+          font-size: 14px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: normal;
+          color: $grey2;
         }
       }
 
@@ -774,6 +867,29 @@
       }
     }
 
+    .rushing_and_receiving {
+      display: flex;
+      flex-direction: row;
+      height: 6px;
+      margin-bottom: 2px;
+  
+      div {
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        opacity: 0.6;
+        font-family: Poppins;
+        font-size: 12px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: 2px;
+        text-align: center;
+        color: #688fbd;
+      }
+    }
+
     p {
       font-size: var(--font-size-16);
 
@@ -807,6 +923,14 @@
           font-weight: normal;
           text-transform: capitalize;
           margin: 5.5px 0;
+          font-family: Poppins;
+          font-size: 14px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: normal;
+          color: $grey2;
         }
       }
 
@@ -944,6 +1068,29 @@
       }
     }
 
+    .rushing_and_receiving {
+      display: flex;
+      flex-direction: row;
+      height: 6px;
+      margin-bottom: 2px;
+  
+      div {
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        opacity: 0.6;
+        font-family: Poppins;
+        font-size: 12px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: 2px;
+        text-align: center;
+        color: #688fbd;
+      }
+    }
+
     p {
       font-size: var(--font-size-14);
 
@@ -967,6 +1114,14 @@
 
         strong {
           margin: 5.5px 0;
+          font-family: Poppins;
+          font-size: 14px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: normal;
+          color: $grey2;
         }
       }
 
@@ -1118,6 +1273,29 @@
       }
     }
 
+    .rushing_and_receiving {
+      display: flex;
+      flex-direction: row;
+      height: 6px;
+      margin-bottom: 2px;
+  
+      div {
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        opacity: 0.6;
+        font-family: Poppins;
+        font-size: 12px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: 2px;
+        text-align: center;
+        color: #688fbd;
+      }
+    }
+
     p {
       font-size: var(--font-size-14);
       margin-top: 15px;
@@ -1143,6 +1321,14 @@
 
         strong {
           margin: 5.5px 0;
+          font-family: Poppins;
+          font-size: 14px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: normal;
+          color: $grey2;
         }
       }
 
@@ -1303,6 +1489,29 @@
       }
     }
 
+    .rushing_and_receiving {
+      display: flex;
+      flex-direction: row;
+      height: 6px;
+      margin-bottom: 2px;
+  
+      div {
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        opacity: 0.6;
+        font-family: Poppins;
+        font-size: 12px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: 2px;
+        text-align: center;
+        color: #688fbd;
+      }
+    }
+
     p {
       font-size: var(--font-size-14);
       margin-top: 15px;
@@ -1328,6 +1537,14 @@
 
         strong {
           margin: 5.5px 0;
+          font-family: Poppins;
+          font-size: 14px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: normal;
+          color: $grey2;
         }
       }
 
@@ -1489,6 +1706,29 @@
       }
     }
 
+    .rushing_and_receiving {
+      display: flex;
+      flex-direction: row;
+      height: 6px;
+      margin-bottom: 2px;
+  
+      div {
+        display: flex;
+        flex: 1;
+        justify-content: center;
+        opacity: 0.6;
+        font-family: Poppins;
+        font-size: 12px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: 2px;
+        text-align: center;
+        color: #688fbd;
+      }
+    }
+
     p {
       font-size: var(--font-size-14);
       margin-top: 15px;
@@ -1514,6 +1754,14 @@
 
         strong {
           margin: 5.5px 0;
+          font-family: Poppins;
+          font-size: 14px;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: normal;
+          letter-spacing: normal;
+          color: $grey2;
         }
       }
 
